...
            BottomNavigationBar(screen = "Konto", navController)
        },
        content = { paddingValues ->
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("Guest")
                    .background(Background)
            ) {
                Surface(
                    color = Background,
                    modifier = Modifier
                        .fillMaxSize()
...
