...
    var isListLoaded by remember {
        mutableStateOf(state.likedKebabs.isNotEmpty())
    }

    Scaffold(
        bottomBar = {
            BottomNavigationBar(screen = "Ulubione", navController)
        },
        content = { paddingValues ->
            Surface(
                color = Background,
                modifier = Modifier
                    .fillMaxSize()
...
